# LTX-2-MLX

./: .gitignore  AUDIO_ISSUES.md  README.md  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  STRUCTURE.md
LTX_2_MLX/: __init__.py  console_log.py  core_utils.py  ffmpeg_encoder.py  generate.py  safetensors_header.py  sidecars.py  types.py  video_encoder.py
LTX_2_MLX/audio/: __init__.py  onset.py
LTX_2_MLX/components/: __init__.py  diffusion_steps.py  guiders.py  noisers.py  patchifiers.py  perturbations.py  schedulers.py
LTX_2_MLX/conditioning/: __init__.py  item.py  keyframe.py  latent.py  tools.py
LTX_2_MLX/kernels/: STEEL_ATTENTION_LICENSE.md  __init__.py  _steel_attention_ltx.py  _steel_attention_ltx_lean.py  _steel_attention_ltx_q8k2.py  _steel_attention_vendor.py  fused_ops.py  steel_attention.py
LTX_2_MLX/kernels/metal/: steel_attention_ltx_body.metal  steel_attention_ltx_header.metal  steel_attention_ltx_lean_body.metal  steel_attention_ltx_lean_header.metal  steel_attention_ltx_q8k2_body.metal  steel_attention_ltx_q8k2_header.metal  steel_attention_vendor_body.metal  steel_attention_vendor_header.metal
LTX_2_MLX/loader/: __init__.py  lora_loader.py  registry.py  transformer_cache.py  weight_converter.py
LTX_2_MLX/model/audio_vae/: __init__.py  decoder.py  encoder.py  vocoder.py
LTX_2_MLX/model/text_encoder/: __init__.py  connector.py  encoder.py  feature_extractor.py  gemma3.py  gemma_tokenizer.py
LTX_2_MLX/model/transformer/: __init__.py  adaspa_mask.py  attention.py  feed_forward.py  model.py  radial_mask.py  radial_sparse.py  rope.py  timestep_embedding.py  transformer.py
LTX_2_MLX/model/upscaler/: __init__.py  spatial.py  temporal.py
LTX_2_MLX/model/video_vae/: __init__.py  decode_utils.py  native_blocks.py  native_decoder.py  native_encoder.py  ops.py  simple_decoder.py  simple_encoder.py  tiling.py
LTX_2_MLX/pipelines/: __init__.py  a2vid_two_stage.py  av_pipeline.py  common.py  distilled.py  ic_lora.py  keyframe_interpolation.py  one_stage.py  retake.py  streaming.py  ti2vid_hq.py  two_stage.py
LTX_2_MLX/pipelines/archive/: distilled.py.bak
LTX_2_MLX/progress/: __init__.py  bars.py
LTX_2_MLX/utils/: __init__.py  _signpost.c  model_ledger.py  prompt_enhancement.py  signpost.py
LTX_2_MLX/videotoolbox/: __init__.py  _compat.py  audio.py  color.py  comparison.py  compile_cache.py  cut_detect.py  deform_conv.py  denoise.py  encode.py  fastdvdnet.py  images.py  pixel_buffers.py  progress.py  temporal.py  upscaler_base.py  video_reader.py  vsr.py  vsr_blocks.py  weights.py  writer.py  yuv.py
LTX_2_MLX/videotoolbox/basicvsrpp/: ATTRIBUTION.md  __init__.py  net.py  upscaler.py
LTX_2_MLX/videotoolbox/basicvsrpp/weights/: README.md
LTX_2_MLX/videotoolbox/esc/: ATTRIBUTION.md  __init__.py  net.py  upscaler.py
LTX_2_MLX/videotoolbox/esc/weights/: README.md
LTX_2_MLX/videotoolbox/fastdvdnet/: ATTRIBUTION.md  __init__.py
LTX_2_MLX/videotoolbox/fastdvdnet/weights/: README.md
LTX_2_MLX/videotoolbox/fbcnn/: ATTRIBUTION.md  __init__.py  deblocker.py  net.py
LTX_2_MLX/videotoolbox/fbcnn/weights/: README.md
LTX_2_MLX/videotoolbox/nafnet/: ATTRIBUTION.md  __init__.py  net.py  restorer.py
LTX_2_MLX/videotoolbox/nafnet/weights/: README.md
LTX_2_MLX/videotoolbox/realbasicvsr/: ATTRIBUTION.md  __init__.py  net.py  upscaler.py
LTX_2_MLX/videotoolbox/realbasicvsr/weights/: README.md
LTX_2_MLX/videotoolbox/realesrgan/: ATTRIBUTION.md  __init__.py  net.py  upscaler.py
LTX_2_MLX/videotoolbox/realesrgan/weights/: README.md
LTX_2_MLX/videotoolbox/realviformer/: ATTRIBUTION.md  __init__.py  net.py  upscaler.py
LTX_2_MLX/videotoolbox/realviformer/weights/: README.md
LTX_2_MLX/videotoolbox/safmn/: ATTRIBUTION.md  __init__.py  net.py  upscaler.py
LTX_2_MLX/videotoolbox/stdf/: ATTRIBUTION.md  __init__.py  deblocker.py  net.py
archive/: convolution.py.bak  decoder.py.bak  encoder.py.bak  resnet.py.bak  sampling.py.bak  text_to_video.py.bak
archive/steel_attention/: README.md  _steel_attention_ltx.py.bak  _steel_attention_vendor.py.bak
archive/steel_attention/metal/: steel_attention_ltx_body.metal.bak  steel_attention_ltx_header.metal.bak  steel_attention_vendor_body.metal.bak  steel_attention_vendor_header.metal.bak
docs/: ARCHITECTURE.md  AUDIO_ISSUES.md  MLX_FLOAT64_PRECISION.md  PARITY.md  PERFORMANCE.md  PERFORMANCE_NOTES.md  PIPELINES.md  TEST_PROMPTS.md  USAGE.md  VSR_PERFORMANCE_NOTES.md
scripts/: analyze_audio_onset.py  analyze_signpost_subphases.py  analyze_video_edges.py  bench-process-watch.sh  bench-quiet.sh  bench_ab_wall_time.sh  bench_compile_groups.sh  bench_eval_cadence.py  bench_ff_microbench.py  bench_int8_alu.py  bench_mxfp8_draft.sh  bench_pretranspose_dtype.py  bench_python_overhead.py  compare_npz_sidecars.py  compare_radial_latents.py  compare_sidecars.py  compare_vae_decoders.py  compare_video_shimmer.py  decode_ab_harness.py  decode_latent_debug.py  download_weights.py  encode_modes_harness.py  generate.py  generate_pytorch_checkpoints.py  mono_pipeline.py  probe_native_vae_tail.py  probe_vae_boundary.py  profile.sh  progress_demo.py  pth_to_safetensors.py  sdpa_dtype_probe.py  stage2_harness.py  test_audio_onset.py  test_progress.py  test_radial_mask.py  test_radial_sparse.py  vsr_harness.py
tests/: README.md  compare_upscaler_outputs.py  conftest.py  test_audio_noise_parity.py  test_audio_onset.py  test_audio_onset_latent.py  test_audio_vae_encoder_load.py  test_conditioning.py  test_console_log.py  test_cut_detect.py  test_ffmpeg_encoder.py  test_fused_ops.py  test_gemma_tokenizer.py  test_image_io.py  test_loaders.py  test_noiser_parity.py  test_parity.py  test_pipelines.py  test_pixel_buffer_chroma.py  test_precision_plumbing.py  test_progress.py  test_safetensors_header.py  test_spatial_upscaler.py  test_spatial_upscaler_parity.py  test_streaming_converters.py  test_tiling_blend.py  test_transformer_cache.py  test_upscaler_full_parity.py  test_upscalers.py  test_v2_architecture.py  test_video_encoder.py  test_videotoolbox_audio.py  test_videotoolbox_comparison.py  test_vocoder_filters.py
(+4 files in other folders)
