[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ltx-2-mlx"
version = "0.1.0"
description = "LTX-2 19B video generation model ported to Apple MLX"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "LTX-2-MLX Contributors"}
]
keywords = ["video generation", "diffusion", "mlx", "apple silicon", "ltx-2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "mlx>=0.31.2",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "safetensors>=0.8.0",
    "tqdm>=4.68.2",
    "einops>=0.8.2",
    "transformers>=5.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "torch>=2.12.0",
    "ruff>=0.15.17",
]
test = [
    "pytest>=9.1.0",
    "torch>=2.12.0",
]
vsr = [
    # Used only by scripts/vsr_harness.py (VideoToolbox Super Resolution).
    # macOS 15+ only; install with: uv pip install '.[vsr]'
    "pyobjc-core>=12.2",
    "pyobjc-framework-AVFoundation>=12.2",
    "pyobjc-framework-CoreAudio>=12.2",
    "pyobjc-framework-CoreMedia>=12.2",
    "pyobjc-framework-Cocoa>=12.2",     # Foundation
    "pyobjc-framework-libdispatch>=12.2",
    "pyobjc-framework-Quartz>=12.2",
    "pyobjc-framework-VideoToolbox>=12.2",
]

[project.urls]
Homepage = "https://github.com/username/LTX-2-MLX"
Repository = "https://github.com/username/LTX-2-MLX"
Documentation = "https://github.com/username/LTX-2-MLX/blob/main/README.md"
Issues = "https://github.com/username/LTX-2-MLX/issues"

[project.scripts]
ltx2-generate = "LTX_2_MLX.scripts.generate:main"

[tool.hatch.build.targets.wheel]
packages = ["LTX_2_MLX"]

[tool.hatch.build.targets.wheel.force-include]
"LTX_2_MLX/kernels/metal" = "LTX_2_MLX/kernels/metal"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_weights: marks tests that require model weights",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
# Set PYTHONPATH for tests
pythonpath = "."

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["LTX-2"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length is configured for readability; avoid churn.
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
